--- a/PostSafety/PostSafety/Storyboards/Dashboard_design.storyboard
+++ b/PostSafety/PostSafety/Storyboards/Dashboard_design.storyboard
@@ -2111,7 +2111,7 @@
                                                         <rect key="frame" x="0.0" y="0.5" width="375" height="111"/>
                                                         <subviews>
                                                             <view alpha="0.69999998807907104" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VDi-u5-S2T">
-                                                                <rect key="frame" x="16" y="17" width="343" height="79"/>
+                                                                <rect key="frame" x="16" y="16.5" width="343" height="79"/>
                                                                 <color key="backgroundColor" red="0.29308408720000001" green="0.30226820250000003" blue="0.30956525260000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <userDefinedRuntimeAttributes>
                                                                     <userDefinedRuntimeAttribute type="string" keyPath="layer.borderWidth" value="2"/>
@@ -2729,10 +2729,10 @@
             </objects>
             <point key="canvasLocation" x="764" y="737"/>
         </scene>
-        <!--Report Confirmation View Controller-->
+        <!--View Controller-->
         <scene sceneID="QTB-O4-Nkf">
             <objects>
-                <viewController storyboardIdentifier="ReportConfirmationViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="YOa-Nb-MTV" customClass="PSReportConfirmationViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController useStoryboardIdentifierAsRestorationIdentifier="YES" id="YOa-Nb-MTV" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="KWd-TM-gmS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -2940,7 +2940,7 @@
                                                         <rect key="frame" x="0.0" y="0.5" width="375" height="111"/>
                                                         <subviews>
                                                             <view alpha="0.69999998807907104" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w0N-sI-bIb">
-                                                                <rect key="frame" x="16" y="16.5" width="343" height="79"/>
+                                                                <rect key="frame" x="16" y="17" width="343" height="79"/>
                                                                 <color key="backgroundColor" red="0.29308408720000001" green="0.30226820250000003" blue="0.30956525260000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <userDefinedRuntimeAttributes>
                                                                     <userDefinedRuntimeAttribute type="string" keyPath="layer.borderWidth" value="2"/>
@@ -2950,7 +2950,7 @@
                                                                 </connections>
                                                             </view>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location 2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P0h-cd-8Uy">
-                                                                <rect key="frame" x="124" y="40" width="127" height="31.5"/>
+                                                                <rect key="frame" x="124" y="40.5" width="127" height="31.5"/>
                                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
                                                                 <color key="textColor" red="1" green="0.29411764709999999" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
@@ -3133,7 +3133,7 @@
                 <tapGestureRecognizer id="NVL-8w-rDw"/>
                 <tapGestureRecognizer id="Ak4-hP-yvR"/>
             </objects>
-            <point key="canvasLocation" x="4247" y="931"/>
+            <point key="canvasLocation" x="5466" y="1770"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="UdW-uG-sj5">
@@ -3194,7 +3194,7 @@
                                                         <rect key="frame" x="0.0" y="0.5" width="375" height="111"/>
                                                         <subviews>
                                                             <view alpha="0.69999998807907104" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UwM-04-bLq">
-                                                                <rect key="frame" x="16" y="16.5" width="343" height="79"/>
+                                                                <rect key="frame" x="16" y="17" width="343" height="79"/>
                                                                 <color key="backgroundColor" red="0.29308408720000001" green="0.30226820250000003" blue="0.30956525260000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <userDefinedRuntimeAttributes>
                                                                     <userDefinedRuntimeAttribute type="string" keyPath="layer.borderWidth" value="2"/>
@@ -3204,7 +3204,7 @@
                                                                 </connections>
                                                             </view>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subcategory 2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Jo-Pq-zVT">
-                                                                <rect key="frame" x="98.5" y="40" width="178.5" height="31.5"/>
+                                                                <rect key="frame" x="98.5" y="40.5" width="178.5" height="31.5"/>
                                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
                                                                 <color key="textColor" red="1" green="0.29411764709999999" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
@@ -3387,7 +3387,7 @@
                 <tapGestureRecognizer id="iQo-Yh-MDz"/>
                 <tapGestureRecognizer id="uZH-Yq-OYC"/>
             </objects>
-            <point key="canvasLocation" x="3591" y="924"/>
+            <point key="canvasLocation" x="4647" y="1770"/>
         </scene>
     </scenes>
     <resources>
