new screens Added

--- a/PostSafety/PostSafety/Storyboards/Admin.storyboard
+++ b/PostSafety/PostSafety/Storyboards/Admin.storyboard
@@ -1311,6 +1311,57 @@
             </objects>
             <point key="canvasLocation" x="97895.199999999997" y="290.10494752623691"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="JGB-oU-7nk">
+            <objects>
+                <viewController id="O77-UU-pq1" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hQ6-CC-bmz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2cK-zM-Iax">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" red="0.92156862750000001" green="0.92156862750000001" blue="0.92156862750000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="0.0" rowHeight="83" id="cai-Xx-8l4">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="83"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cai-Xx-8l4" id="cCR-n9-4RG">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="82.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Yesterday's Hazards" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PAa-GG-hZ7">
+                                                    <rect key="frame" x="74" y="26" width="227" height="31.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="PAa-GG-hZ7" firstAttribute="centerY" secondItem="cCR-n9-4RG" secondAttribute="centerY" id="AJt-3l-Ira"/>
+                                                <constraint firstItem="PAa-GG-hZ7" firstAttribute="centerX" secondItem="cCR-n9-4RG" secondAttribute="centerX" id="sdD-Dp-9Ox"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.92156862750000001" green="0.92156862750000001" blue="0.92156862750000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="IEL-yx-qnz" firstAttribute="bottom" secondItem="2cK-zM-Iax" secondAttribute="bottom" id="3ns-1b-Pwl"/>
+                            <constraint firstItem="2cK-zM-Iax" firstAttribute="centerX" secondItem="IEL-yx-qnz" secondAttribute="centerX" id="5PP-ph-g3A"/>
+                            <constraint firstItem="2cK-zM-Iax" firstAttribute="width" secondItem="hQ6-CC-bmz" secondAttribute="width" id="WT3-Pb-vYI"/>
+                            <constraint firstItem="2cK-zM-Iax" firstAttribute="centerX" secondItem="IEL-yx-qnz" secondAttribute="centerX" id="bfh-k1-yKm"/>
+                            <constraint firstItem="2cK-zM-Iax" firstAttribute="top" secondItem="IEL-yx-qnz" secondAttribute="top" id="cY9-Pd-JRo"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="IEL-yx-qnz"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="381-H5-SvS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="98613.600000000006" y="295.50224887556226"/>
+        </scene>
     </scenes>
     <resources>
         <image name="back" width="25" height="25"/>
